Fix form on mobile.

--- a/public/main.css
+++ b/public/main.css
@@ -188,7 +188,7 @@ main {
     border: 2px solid var(--color-border);
     border-radius: 8px;
     padding: 0.5rem 1rem;
-    width: 100%;
+    width: 80%;
     max-width: 400px;
     margin-inline: auto;
 }
@@ -202,6 +202,7 @@ main {
 }
 
 .input-group input {
+    width: 100%; 
     flex: 1;
     background: transparent;
     border: none;
